--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@
                   src="./images/banking_app.jpg"
                   alt="Banking App"
                 />
-                  <p class="portfolio-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>  
+                <p class="portfolio-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Banking App</h3>
@@ -353,11 +353,11 @@
                   src="./images/cashless_payment.jpg"
                   alt="Cashless Payment"
                 />
-                  <p class="portfolio-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+                <p class="portfolio-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Cashless Payment</h3>
@@ -371,11 +371,11 @@
                   src="./images/meditation_app.jpg"
                   alt="Meditation App"
                 />
-                  <p class="portfolio-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+                <p class="portfolio-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Meditation App</h3>
@@ -389,11 +389,13 @@
                   src="./images/taxi_service.jpg"
                   alt="Taxi Service"
                 />
-                  <p class="portfolio-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
+                <p class="portfolio-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
+
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
@@ -424,11 +426,11 @@
                   src="./images/online_courses.jpg"
                   alt="Online Courses"
                 />
-                  <p class="portfolio-cover">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+                <p class="portfolio-cover">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="item-info">
                 <h3 class="portfolio-item-subtitle">Online Courses</h3>
@@ -486,7 +488,103 @@
             </li>
           </ul>
         </div>
+        <div class="contact-info">
+          <p class="contact-form-title">Subscribe</p>
+          <div class="contact-form-wrap">
+          	<form class="contact-form">
+	            <input
+	              type="email"
+	              name="subscribe-email"
+	              class="input-email"
+	              placeholder="E-mail"
+	            />
+	          </form>
+	          <button class="subscribe-btn" type="submit">
+	            Subscribe
+	            <svg class="subscribe-icon" width="24" height="24">
+	              <use href="/images/icons.svg#icon-send"></use>
+	            </svg>
+	          </button>
+          </div>
+        </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg class="icon-close" width="8" heihgt="8">
+            <use href="/images/icons.svg#close-btn"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <label class="modal-lable" for="user-name">Name</label>
+          <div class="modal-input-wrap">
+            <input
+              class="modal-input"
+              type="text"
+              name="user-name"
+              id="user-name"
+            />
+            <svg class="input-icon" width="18" height="18">
+              <use href="/images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+
+          <label class="modal-lable" for="user_tel">Phone</label>
+          <div class="modal-input-wrap">
+            <input
+              class="modal-input"
+              type="tel"
+              name="user_tel"
+              id="user_tel"
+            />
+            <svg class="input-icon" width="18" height="18">
+              <use href="/images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+
+          <label for="user-email" class="modal-lable">Email</label>
+          <div class="modal-input-wrap">
+            <input
+              class="modal-input"
+              type="email"
+              name="user-email"
+              id="user-email"
+            />
+            <svg class="input-icon" width="18" height="18">
+              <use href="/images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+
+          <label class="modal-lable" for="user_comment">Comment</label>
+          <textarea
+            class="modal-comment"
+            name="user_comment"
+            id="user_comment"
+            placeholder="Text input"
+          ></textarea>
+
+          <input
+            type="checkbox"
+            class="policy-checkbox visually-hidden"
+            name="privacy-policy"
+            id="privacy-policy"
+            value="true"
+          />
+          <label for="privacy-policy" class="check-text">
+            <span class="checkbox-visible">
+              <svg class="check-icon" width="10" heihgt="8">
+                <use href="/images/icons.svg#icon-check"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the
+            <a href="" class="privacy-policy-link">Privacy Policy</a>
+          </label>
+
+          <button class="modal-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
