--- a/index.html
+++ b/index.html
@@ -490,97 +490,109 @@
         </div>
         <div class="contact-info">
           <p class="contact-form-title">Subscribe</p>
-          <div class="contact-form-wrap">
-          	<form class="contact-form">
-	            <input
-	              type="email"
-	              name="subscribe-email"
-	              class="input-email"
-	              placeholder="E-mail"
-	            />
-	          </form>
-	          <button class="subscribe-btn" type="submit">
-	            Subscribe
-	            <svg class="subscribe-icon" width="24" height="24">
-	              <use href="/images/icons.svg#icon-send"></use>
-	            </svg>
-	          </button>
-          </div>
+          <form class="contact-form">
+            <label class="footer-form-label" for="input-email">
+              <input
+                type="email"
+                name="subscribe-email"
+                class="input-email"
+                placeholder="E-mail"
+                id="input-email"
+              />
+            </label>
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="/images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
-          <svg class="icon-close" width="8" heihgt="8">
+          <svg class="icon-close" width="8" height="8">
             <use href="/images/icons.svg#close-btn"></use>
           </svg>
         </button>
+
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <label class="modal-lable" for="user-name">Name</label>
-          <div class="modal-input-wrap">
-            <input
-              class="modal-input"
-              type="text"
-              name="user-name"
-              id="user-name"
-            />
-            <svg class="input-icon" width="18" height="18">
-              <use href="/images/icons.svg#icon-person"></use>
-            </svg>
-          </div>
-
-          <label class="modal-lable" for="user_tel">Phone</label>
-          <div class="modal-input-wrap">
-            <input
-              class="modal-input"
-              type="tel"
-              name="user_tel"
-              id="user_tel"
-            />
-            <svg class="input-icon" width="18" height="18">
-              <use href="/images/icons.svg#icon-phone"></use>
-            </svg>
-          </div>
-
-          <label for="user-email" class="modal-lable">Email</label>
-          <div class="modal-input-wrap">
-            <input
-              class="modal-input"
-              type="email"
-              name="user-email"
-              id="user-email"
-            />
-            <svg class="input-icon" width="18" height="18">
-              <use href="/images/icons.svg#icon-email"></use>
-            </svg>
-          </div>
-
-          <label class="modal-lable" for="user_comment">Comment</label>
-          <textarea
-            class="modal-comment"
-            name="user_comment"
-            id="user_comment"
-            placeholder="Text input"
-          ></textarea>
-
-          <input
-            type="checkbox"
-            class="policy-checkbox visually-hidden"
-            name="privacy-policy"
-            id="privacy-policy"
-            value="true"
-          />
-          <label for="privacy-policy" class="check-text">
-            <span class="checkbox-visible">
-              <svg class="check-icon" width="10" heihgt="8">
-                <use href="/images/icons.svg#icon-check"></use>
+          <div class="modal-field-wrap">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="/images/icons.svg#icon-person"></use>
               </svg>
-            </span>
-            I accept the terms and conditions of the
-            <a href="" class="privacy-policy-link">Privacy Policy</a>
-          </label>
+            </div>
+          </div>
+
+          <div class="modal-field-wrap">
+            <label class="modal-label" for="user-tel">Phone</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="tel"
+                name="user_tel"
+                id="user-tel"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="/images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-field-wrap">
+            <label for="user-email" class="modal-label">Email</label>
+            <div class="modal-input-wrap">
+              <input
+                class="modal-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="input-icon" width="18" height="18">
+                <use href="/images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-comment-wrap">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-comment"
+              name="user_comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="policy-wrap">
+          	<input
+	            type="checkbox"
+	            class="policy-checkbox visually-hidden"
+	            name="privacy-policy"
+	            id="user-privacy"
+	            value="true"
+	          />
+	          <label for="user-privacy" class="check-text">
+	            <span class="checkbox-visible">
+	              <svg class="check-icon" width="10" height="8">
+	                <use href="/images/icons.svg#icon-check"></use>
+	              </svg>
+	            </span>
+	            I accept the terms and conditions of the
+	            <a href="" class="privacy-policy-link">Privacy Policy</a>
+	          </label>
+          </div>
 
           <button class="modal-btn" type="submit">Send</button>
         </form>
