--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <button class="subscribe-btn" type="submit">
               Subscribe
               <svg class="subscribe-icon" width="24" height="24">
-                <use href="/images/icons.svg#icon-send"></use>
+                <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
           </form>
@@ -514,7 +514,7 @@
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="icon-close" width="8" height="8">
-            <use href="/images/icons.svg#close-btn"></use>
+            <use href="./images/icons.svg#close-btn"></use>
           </svg>
         </button>
 
@@ -544,8 +544,8 @@
                 name="user_tel"
                 id="user-tel"
               />
-              <svg class="input-icon" width="18" height="18">
-                <use href="/images/icons.svg#icon-phone"></use>
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
@@ -559,8 +559,8 @@
                 name="user-email"
                 id="user-email"
               />
-              <svg class="input-icon" width="18" height="18">
-                <use href="/images/icons.svg#icon-email"></use>
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
@@ -569,7 +569,7 @@
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="modal-comment"
-              name="user_comment"
+              name="user-comment"
               id="user-comment"
               placeholder="Text input"
             ></textarea>
@@ -586,7 +586,7 @@
 	          <label for="user-privacy" class="check-text">
 	            <span class="checkbox-visible">
 	              <svg class="check-icon" width="10" height="8">
-	                <use href="/images/icons.svg#icon-check"></use>
+	                <use href="./images/icons.svg#icon-check"></use>
 	              </svg>
 	            </span>
 	            I accept the terms and conditions of the
