--- a/index.html
+++ b/index.html
@@ -529,8 +529,8 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg class="input-icon" width="18" height="18">
-                <use href="/images/icons.svg#icon-person"></use>
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
           </div>
@@ -579,7 +579,7 @@
           	<input
 	            type="checkbox"
 	            class="policy-checkbox visually-hidden"
-	            name="privacy-policy"
+	            name="user-privacy"
 	            id="user-privacy"
 	            value="true"
 	          />
